--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,21 +1,11 @@
-# This workflow will build a Java project with Maven, and cache/restore any dependencies to improve the workflow execution time
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-maven
-
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
 name: Java CI with Maven
-
 on:
   push:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-
 jobs:
-  build:
+  setup:
     strategy:
       fail-fast: false
       matrix:
@@ -23,16 +13,18 @@ jobs:
           - os: ubuntu-latest
             java: 22-ea
     runs-on: ${{ matrix.os }}
-
     steps:
-    - uses: actions/checkout@v4
-    - name: Set up JDK 22
-      uses: actions/setup-java@v3
-      with:
-        java-version: ${{ matrix.java }}
-        distribution: 'temurin'
-        cache: maven
-    - name: Build with Maven
-      run: mvn -B clean test --file pom.xml
-    - name: Clean target
-      run: mvn -B clean --file pom.xml
+      - uses: actions/checkout@v4
+      - name: Set up JDK 22
+        uses: actions/setup-java@v3
+        with:
+          java-version: ${{ matrix.java }}
+          distribution: 'temurin'
+          cache: maven
+      - name: Test with Maven
+        run: mvn -B clean test --file pom.xml
+  clean:
+    runs-on: ${{ matrix.os }}
+    steps:
+      - name: Clean target
+        run: mvn -B clean --file pom.xml
