--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,9 +22,14 @@ jobs:
           distribution: 'temurin'
           cache: maven
       - name: Test with Maven
-        run: mvn -B clean test --file pom.xml
+        run: mvn -B clean test
   clean:
+    needs: setup
+    strategy:
+      matrix:
+        include:
+          - os: ubuntu-latest
     runs-on: ${{ matrix.os }}
     steps:
       - name: Clean target
-        run: mvn -B clean --file pom.xml
+        run: mvn clean
