--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,20 +16,12 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Set up JDK 22
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4
         with:
           java-version: ${{ matrix.java }}
-          distribution: 'temurin'
+          distribution: 'zulu'
           cache: maven
       - name: Test with Maven
         run: mvn -B clean test
-  clean:
-    needs: setup
-    strategy:
-      matrix:
-        include:
-          - os: ubuntu-latest
-    runs-on: ${{ matrix.os }}
-    steps:
       - name: Clean target
         run: mvn clean
