--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,5 +20,5 @@ jobs:
         uses: actions/upload-artifact@v4.3.3
         with:
           name: app.jar
-          path: /target/job-manager.jar
+          path: job-manager.jar
             
