--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,9 +16,10 @@ jobs:
           distribution: 'zulu'
       - name: Build with Maven
         run: mvn clean install
+      - name: LS
+        run: ls -ltr
       - name: Upload a Build Artifact
         uses: actions/upload-artifact@v4.3.3
-        run: ls .
         with:
           name: app.jar
           path: /target/job-manager.jar
