--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Build with Maven
         run: mvn clean install
       - name: LS
-        run: ls -ltr
+        run: ls -ltr target
       - name: Upload a Build Artifact
         uses: actions/upload-artifact@v4.3.3
         with:
