--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,4 +21,8 @@ jobs:
         with:
           name: target
           path: target
+  docker:
+    needs: build
+    uses: ./github/workflows/cd.yml
+    secrets: inherit
             
