- Fix path for local workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,6 @@ jobs:
           path: target
   docker:
     needs: build
-    uses: ./github/workflows/cd.yml
+    uses: ./.github/workflows/cd.yml
     secrets: inherit
             
