--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -6,10 +6,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Download a Build Artifact
-        uses: actions/download-artifact@v4.1.7
-        with:
-          name: target
       - name: Docker Setup Buildx
         uses: docker/setup-buildx-action@v3.3.0
       - name: Docker Login
@@ -19,6 +15,8 @@ jobs:
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
           ecr: auto
           logout: true
+      - name: LS
+        run: ls -ltr
       - name: Build and push Docker images
         uses: docker/build-push-action@v5.3.0
         with:
