--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=job-manager
-spring.datasource.url=jdbc:postgresql://localhost:5432/job_manager
+spring.datasource.url=jdbc:h2:mem:job_manager
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.datasource.username=admin
 spring.datasource.password=admin
